Fixed Sidebar and scrolling issue, made sidebar responsive also, collapses when page width decreases

--- a/src/components/data.css
+++ b/src/components/data.css
@@ -1,14 +1,17 @@
 
 div.nameanimation{
+    position: relative;
     height: 160px;
     background-color: rgba(25, 25, 25, 0.466);
     box-shadow: inset 0 10px 10px -10px black;
+    box-shadow: 0 10px 10px -10px rgba(25, 25, 25, 0.6) ;
     z-index: 2;
     /*box-shadow: 0 0 10px 15px rgb(25,25,25);*/
     
 }
 
 h1.name{
+    z-index: 3;
     overflow: hidden;
     color: #fff;
     text-align: center;
@@ -36,42 +39,67 @@ h1.name{
     50% { border-color: orange; }
   }
 
-  .main{
-    display: flex;
-  }
   .pcontent{
     text-align: center;
+    width:inherit;
   }
   .titlecontent{
-    box-shadow: inset 0 10px 10px -10px rgba(25, 25, 25, 0.6) ;
+    width:inherit;
     text-align: center;
     overflow-x: wrap;
   }
   .leftmenu{
-    position: sticky;
+    position: relative;
+    overflow: auto;
     box-shadow: inset 0 10px 10px -10px rgba(25, 25, 25, 0.6) ;
-    display: block;
-    height:100%;
-    width:285px;
-    overflow-y: scroll;
+    left:0;
+    z-index: 1;
+    width:15%;
     background-color: #E7E9EB;
     overflow-x: hidden;
     box-sizing: inherit;
   }
-
+  @media (max-width: 1000px) {
+    .leftmenu {
+      display: none;
+      width: 0px;
+    }
+    .playerdata{
+      margin-left: 0 !important;
+      margin-right:0 !important;
+    }
+  }
+  .leftmenuinner{
+    overflow: auto;
+    position:fixed !important;
+    background-color: transparent;
+    margin: 0px;
+    top:0px;
+    width:15%;
+    height:100%;
+  }
+  .leftmenuinnerinner{
+    overflow: auto;
+    box-shadow: inset 0 10px 10px -10px rgba(25, 25, 25, 0.6) ;
+    height: 100%;
+    background-color: #E7E9EB;
+    overflow-y: scroll;
+    overflow-x: hidden;
+  }
+  .playerdata{
+    margin-left: 15%;
+    box-shadow: inset 0 10px 10px -10px rgba(25, 25, 25, 0.6) ;
+    box-sizing: inherit;
+  }
   .leftmenuheader{
+    display: block;
+    width:200px;
     text-align: center;
     margin-top: 10px;
     font-size: 1.5em;
     color: #000;
   }
-  .rightmostcontent{
-    padding: 5px;
-    overflow-x: hidden;
-    outline: 1px solid black;
-    width:285px;
-    box-shadow: inset 0 10px 10px -10px rgba(25, 25, 25, 0.6) ;
-  }
+
   p{
     text-align: center;
     color: #000;
